web/book/tests/snapshots/snapshot__transforms__sort__examples__2.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nsort [age, -tenure, +salary]\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age NULLS LAST,
  tenure DESC NULLS LAST,
  salary NULLS LAST

