web/book/tests/snapshots/snapshot__transforms__sort__examples__3.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nsort [s\"substr({first_name}, 2, 5)\"]\n"
---
WITH table_1 AS (
  SELECT
    *,
    substr(first_name, 2, 5) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1 AS table_0
ORDER BY
  _expr_0 NULLS LAST

